--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="col-md-6 offset-md-3">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Identificar Órdenes por Voz</h5>
+            <h5 class="card-title">Identificar Órdenes por Voz Con JS</h5>
             <p class="card-text">Presiona el botón y di tu orden.</p>
             <button id="start-btn" class="btn btn-primary">Comenzar Reconocimiento de Voz</button>
             <div id="result"></div>
