--- a/index.html
+++ b/index.html
@@ -20,6 +20,37 @@
             <p class="card-text">Presiona el botón y di tu orden.</p>
             <button id="start-btn" class="btn btn-primary">Comenzar Reconocimiento de Voz</button>
             <div id="result"></div>
+            <div class="mt-3">
+              <div class="row">
+                <div class="col">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="barraAbrirPestana" disabled>
+                    <label class="form-check-label" for="barraAbrirPestana">Abrir Pestaña</label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="barraIrAPagina" disabled>
+                    <label class="form-check-label" for="barraIrAPagina">Ir a Página</label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="barraModificarTamanoVentana" disabled>
+                    <label class="form-check-label" for="barraModificarTamanoVentana">Modificar Tamaño de Ventana</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="barraCerrarPestana" disabled>
+                    <label class="form-check-label" for="barraCerrarPestana">Cerrar Pestaña</label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="barraCerrarNavegador" disabled>
+                    <label class="form-check-label" for="barraCerrarNavegador">Cerrar Navegador</label>
+                  </div>
+                </div>
+                <div class="container mt-5"> 
+                  <span class="fs-1 fw-bold fst-italic" id="controlTexto">control de texto </span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -28,7 +59,7 @@
 
   <footer class="footer mt-auto py-3 bg-light fixed-bottom">
     <div class="container">
-      <span class="text-muted">© 2024 Todos los derechos reservados.</span>
+      <span class="text-muted">© 2024 Jorge Isaid Lopez Rodriguez.</span>
     </div>
   </footer>
 
